Correction de la documentation
